<resources>
    <string name="app_name">TaskMaster</string>
    <string name="my_tasks">My Tasks</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="task_viewer">TaskViewer</string>
    <string name="add_task">ADD TASK</string>
    <string name="task_description">Task Description</string>
    <string name="task_title">Task Title</string>
    <string name="add_task_label">Add Task label</string>
    <string name="do_something">Do Something</string>
    <string name="my_task">My Task</string>
    <string name="total_tasks">Total Tasks: 0</string>
    <string name="task_1">Task 1</string>
    <string name="task_2">Task 2</string>
    <string name="task_3">Task 3</string>
    <string name="username">username</string>
    <string name="settings">SETTINGS</string>
    <string name="settings_img">Settings_img</string>
    <string-array name="task_status">
        <item>new</item>
        <item>assigned</item>
        <item>in progress</item>
        <item>complete</item>
    </string-array>

    <string-array name="teams">
        <item>Max</item>
        <item>Josh</item>
        <item>Mohammad</item>
        <item>Jason</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_name">task name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signin">Signin</string>
    <string name="create_new_account">Create new account</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="you_will_receive_a_message_that_contains_a_verification_number">You will receive a message that contains a verification number</string>
    <string name="please_enter_the_verification_number">Please enter the verification number</string>
    <string name="verification_number">Verification number</string>
    <string name="confirm">Confirm</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="task_status">task status</string>
    <string name="task_img">task_img</string>
    <string name="back">BACK</string>
    <string name="upload_file">UPLOAD FILE</string>
    <string name="task_detail">Task Detail</string>
    <string name="channel_name">taskMaster</string>
    <string name="channel_description">notification for new task</string>
</resources>