<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmAccount">

    <TextView
        android:id="@+id/confirm_main_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="43dp"
        android:text="@string/you_will_receive_a_message_that_contains_a_verification_number"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirm_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="51dp"
        android:text="@string/please_enter_the_verification_number"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/confirm_main_label"
        app:layout_constraintTop_toBottomOf="@+id/confirm_main_label" />

    <EditText
        android:id="@+id/confirm_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="43dp"
        android:ems="10"
        android:hint="@string/verification_number"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_label" />

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="@color/button_primary"
        android:text="@string/confirm"
        android:textColor="@color/button_test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_code" />

    <Button
        android:id="@+id/confirm_resend_code_btn"
        android:layout_width="325dp"
        android:layout_height="42dp"
        android:layout_marginBottom="248dp"
        android:backgroundTint="@color/button_primary"
        android:text="@string/resend_code"
        android:textColor="@color/button_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_btn"
        app:layout_constraintVertical_bias="0.695" />

</androidx.constraintlayout.widget.ConstraintLayout>